<resources>
    <string name="app_name">Tendery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="admin">admin</string>
    <string name="username">Bayu Nindioko</string>

    <string name="paket_tender">Paket Tender</string>
    <string name="hps">HPS</string>
    <string name="data_tender">Data Tender</string>
    <string name="penawaran">Penawaran</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="post_test">Post Test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">about</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_password">Masukan password</string>
    <string name="masuk">Masuk</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="keluar">Keluar</string>
    <string name="daftar_pengguna">Buat Akun</string>
    <string name="email_card">email@gmail.com</string>
    <string name="tambah_user">Tambah User</string>
    <string name="edit_user">Edit Akun</string>
    <string name="kode_paket">kode paket</string>
    <string name="simpan">simpan</string>

    //register
    <string name="error_enter_email">Masukan email terlebih dahulu!</string>
    <string name="error_passrword">Masukan password terlebih dahulu</string>
    <string name="invalid_email">Gunakan format email yang sesuai</string>
    <string name="error_confirm_password">Password tidak sesuai!</string>
    <string name="password_leght">Password harus memiliki minimal 8 karakter</string>
    <string name="daftar">Daftar Akun</string>
    <string name="sign_up_button">Daftar</string>
    <string name="have_account">Belum memiliki Akun?</string>
    <string name="error_select_role">Pilih Role</string>
    <string name="error_nama">Masukan nama!</string>
    <string name="kode_rup">Kode RUP \t:</string>
    <string name="k_l_pd">K/L/PD \t\t\t\t:</string>
    <string name="nilai_pagu">Nilai Pagu \t:</string>
    <string name="tahun">Tahun \t\t\t\t\t:</string>
    <string name="jenis">Jenis \t\t\t\t\t\t:</string>
    <string name="lokasi">Lokasi</string>
    <string name="provinsi">Provinsi \t\t\t\t\t\t\t\t\t:</string>
    <string name="kabupaten_kota">Kabupaten / Kota\t:</string>
    <string name="lokasi_lengkap">Alamat Lengkap \t\t:</string>

    <string name="kode_rup_label">Kode RUP\t\t\t\t\t\t\t\t:</string>
    <string name="jenis_barang_label">Jenis Barang/Jasa\t:</string>
    <string name="satuan_label">Satuan\t\t\t\t\t\t\t\t\t\t\t:</string>
    <string name="harga_label">Harga\t\t\t\t\t\t\t\t\t\t\t\t:</string>
    <string name="pajak_label">Pajak\t\t\t\t\t\t\t\t\t\t\t\t:</string>
    <string name="total_label">Total\t\t\t\t\t\t\t\t\t\t\t\t\t:</string>
    <string name="keterangan_label">Keterangan\t\t\t\t\t\t:</string>
    <string name="nilai_pagu_label">Nilai Pagu\t\t\t\t\t\t\t\t:</string>
    <string name="kode_tender">Kode Tender :</string>

    <string name="kode_tender_data">Kode Tender \t\t\t\t\t\t\t\t\t\t:</string>
    <string name="keterangan_kualifikasi">Keterangan Kualifikasi \t:</string>
    <string name="jenis_kualifikasi">Jenis Kualifikasi \t\t\t\t\t\t\t:</string>
    <string name="tanggal_mulai">Tanggal Mulai \t\t\t\t\t\t\t\t:</string>
    <string name="tanggal_selesai">Tanggal Selesai \t\t\t\t\t\t\t:</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>