<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tendery.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_paket_tender"
        android:name="com.example.tendery.ui.paket.PaketFragment"
        android:label="@string/paket_tender"
        tools:layout="@layout/fragment_paket" />

    <fragment
        android:id="@+id/nav_hps"
        android:name="com.example.tendery.ui.hps.HpsFragment"
        android:label="@string/hps"
        tools:layout="@layout/fragment_hps" />

    <fragment
        android:id="@+id/nav_data_tender"
        android:name="com.example.tendery.ui.data_tender.DataTenderFragment"
        android:label="@string/data_tender"
        tools:layout="@layout/fragment_data_tender" />

    <fragment
        android:id="@+id/nav_penawaran"
        android:name="com.example.tendery.ui.penawaran.PenawaranFragment"
        android:label="@string/penawaran"
        tools:layout="@layout/fragment_penawaran" />

    <fragment
        android:id="@+id/nav_pertanyaan"
        android:name="com.example.tendery.ui.pertanyaan.PertanyaanFragment"
        android:label="@string/pertanyaan"
        tools:layout="@layout/fragment_pertanyaan" />

    <fragment
        android:id="@+id/nav_post_test"
        android:name="com.example.tendery.ui.postTest.PostTestFragment"
        android:label="@string/post_test"
        tools:layout="@layout/fragment_post_test" />


</navigation>